--- a/src/content/App_Config/Bob.config
+++ b/src/content/App_Config/Bob.config
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Configuration xmlns="http://www.unic.com/Bob">
+<Configuration>
   <!--
         Settings for the local dev environment:
         WebsiteCodeName:    Identifier for the IIS site and the folder under
